--- a/CusoJS/aula06/ex003.html
+++ b/CusoJS/aula06/ex003.html
@@ -20,8 +20,12 @@
     <h1>Olá, mundo!</h1>
     <p>To safe</p>
     <script>
-        var nome = window.prompt('Qual é seu nome?') 
-        window.alert('É um grande prazer em te conhecer, '+ nome '!') // Concateno
+        var n1 = Number(window.prompt ('Digite um número: ')) //Number pra tratar todos os numeros
+        var n2 = Number(window.prompt ('Digite outro número: '))
+        var s = n1 + n2
+        window.alert(`A soma entre ${n1} e ${n2} é igual a ${s}`) // Concatenação
+        // + para adição
+        // + para concatenação
     </script>
 </body>
 </html>
