--- a/CusoJS/aula11/teste02.html
+++ b/CusoJS/aula11/teste02.html
@@ -8,10 +8,12 @@
 </head>
 <body>
     <div id="caixa">
-        <h1>Calculadora de IMC</h1>
-        <p>Coloque sua altura (em metros): <input type="number" id="alt" step="0.01"></p>
-        <p>Coloque seu peso (em kg): <input type="number" id="peso" step="0.1"></p>
-        <button onclick="calcular()">Calcular IMC</button>
+        <div>
+            <h1>Calculadora de IMC</h1>
+            <p>Coloque sua altura (em metros): <input type="number" id="alt" step="0.01"></p>
+            <p>Coloque seu peso (em kg): <input type="number" id="peso" step="0.1"></p>
+            <button onclick="calcular()">Calcular IMC</button>
+        </div>
         <div id="res" style="margin-top: 20px; font-weight: bold;">
         </div>
     </div>
@@ -19,7 +21,7 @@
     <script>
     
         function calcular() {
-
+            
             let alt = parseFloat(document.getElementById("alt").value);
             let peso = parseFloat(document.getElementById("peso").value);
             let res = document.getElementById("res");
